utils/utils.h

typedef struct {
    const char* name;
    const char* homepage;
    const char* email;
} PluginAuthor;
typedef struct {
    bool valid;
    unsigned int index;
    const char* name;
    const char* symbol;
} PluginGUIPort;
typedef struct {
    const char* resourcesDirectory;
    const char* iconTemplate;
    const char* settingsTemplate;
    const char* javascript;
    const char* stylesheet;
    const char* screenshot;
    const char* thumbnail;
    const char* discussionURL;
    const char* documentation;
    const char* brand;
    const char* label;
    const char* model;
    const char* panel;
    const char* color;
    const char* knob;
    PluginGUIPort* ports;
    const char* const* monitoredOutputs;
} PluginGUI;
typedef struct {
    const char* resourcesDirectory;
    const char* screenshot;
    const char* thumbnail;
} PluginGUI_Mini;
typedef struct {
    bool valid;
    const char* uri;
    const char* symbol;
    const char* name;
    int index;
} PluginPortGroup;
typedef struct {
    float min;
    float max;
    float def;
} PluginPortRanges;
typedef struct {
    const char* label;
    const char* render;
    const char* symbol;
    bool _custom; // internal
} PluginPortUnits;
typedef struct {
    bool valid;
    float value;
    const char* label;
} PluginPortScalePoint;
typedef struct {
    bool valid;
    unsigned int index;
    const char* name;
    const char* symbol;
    PluginPortRanges ranges;
    PluginPortUnits units;
    const char* comment;
    const char* designation;
    const char* group;
    const char* const* properties;
    int rangeSteps;
    const PluginPortScalePoint* scalePoints;
    const char* shortName;
} PluginPort;
typedef struct {
    PluginPort* input;
    PluginPort* output;
} PluginPortsI;
typedef struct {
    PluginPortsI audio;
    PluginPortsI control;
    PluginPortsI cv;
    PluginPortsI midi;
} PluginPorts;
typedef struct {
    int64_t min;
    int64_t max;
    int64_t def;
} PluginLongParameterRanges;
typedef struct {
    char type;
    union {
        PluginPortRanges f;
        PluginLongParameterRanges l;
        const char* s;
    };
} PluginParameterRanges;
typedef struct {
    bool valid;
    bool readable;
    bool writable;
    const char* uri;
    const char* label;
    const char* type;
    // for regular controls
    PluginParameterRanges ranges;
    PluginPortUnits units;
    const char* comment;
    const char* shortName;
    // for path stuff
    const char* const* fileTypes;
    const char* const* supportedExtensions;
} PluginParameter;
typedef struct {
    bool valid;
    const char* uri;
    const char* label;
    const char* path;
} PluginPreset;
typedef struct {
    bool valid;
    const char* uri;
    const char* name;
    const char* binary;
    const char* brand;
    const char* label;
    const char* license;
    const char* comment;
    const char* buildEnvironment;
    const char* const* category;
    int microVersion;
    int minorVersion;
    int release;
    int builder;
    int licensed; // PluginLicenseType
    int iotype; // PluginIOType
    bool hasExternalUI;
    const char* version;
    const char* stability;
    PluginAuthor author;
    const char* const* bundles;
    PluginGUI gui;
    PluginPorts ports;
    const PluginPortGroup* portGroups;
    const PluginParameter* parameters;
    const PluginPreset* presets;
} PluginInfo;
typedef struct {
    int licensed; // PluginLicenseType
    const PluginPreset* presets;
} NonCachedPluginInfo;
typedef struct {
    const char* uri;
    const char* name;
    const char* brand;
    const char* label;
    const char* comment;
    const char* buildEnvironment;
    const char* const* category;
    int microVersion;
    int minorVersion;
    int release;
    int builder;
    int licensed; // PluginLicenseType
    int iotype; // PluginIOType
    PluginGUI_Mini gui;
} PluginInfo_Mini;
typedef struct {
    const PluginPort* controlInputs;
    const char* const* monitoredOutputs;
    const PluginParameter* parameters;
    const char* buildEnvironment;
    int microVersion;
    int minorVersion;
    int release;
    int builder;
} PluginInfo_Essentials;
typedef struct {
    int8_t channel;
    uint8_t control;
    // ranges added in v1.2, flag needed for old format compatibility
    bool hasRanges;
    float minimum;
    float maximum;
} PedalboardMidiControl;
typedef struct {
    bool valid;
    const char* symbol;
    float value;
    PedalboardMidiControl midiCC;
} PedalboardPluginPort;
typedef struct {
    bool valid;
    bool bypassed;
    int instanceNumber;
    const char* instance;
    const char* uri;
    PedalboardMidiControl bypassCC;
    float x;
    float y;
    const PedalboardPluginPort* ports;
    const char* preset;
} PedalboardPlugin;
typedef struct {
    bool valid;
    const char* source;
    const char* target;
} PedalboardConnection;
typedef struct {
    bool valid;
    const char* symbol;
    const char* name;
} PedalboardHardwareMidiPort;
typedef struct {
    unsigned int audio_ins;
    unsigned int audio_outs;
    unsigned int cv_ins;
    unsigned int cv_outs;
    const PedalboardHardwareMidiPort* midi_ins;
    const PedalboardHardwareMidiPort* midi_outs;
    bool serial_midi_in;
    bool serial_midi_out;
    bool midi_merger_out;
    bool midi_broadcaster_in;
} PedalboardHardware;
typedef enum {
    kPedalboardTimeAvailableBPB     = 0x1,
    kPedalboardTimeAvailableBPM     = 0x2,
    kPedalboardTimeAvailableRolling = 0x4,
} PedalboardTimeInfoAvailableBits;
typedef struct {
    unsigned int available;
    float bpb;
    PedalboardMidiControl bpbCC;
    float bpm;
    PedalboardMidiControl bpmCC;
    bool rolling;
    PedalboardMidiControl rollingCC;
} PedalboardTimeInfo;